src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>MyNewNumber__c</fullName>
        <formula>25</formula>
        <label>MyNewNumber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diiz_number__c</fullName>
        <description>test</description>
        <label>diiz_number__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diz_text__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>test</description>
        <inlineHelpText>test</inlineHelpText>
        <label>diz_text__c</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>myEmail__c</fullName>
        <description>dfghjkl</description>
        <inlineHelpText>dhjkl;&apos;</inlineHelpText>
        <label>myEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>myField1__c</fullName>
        <description>555555</description>
        <label>myField</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tgjk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Plan Template</label>
        <referenceTo>ActionPlanTemplate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>